// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackerCard /> by default matches with snapshot 1`] = `
<div
  style={
    Object {
      "border": "2px solid #eee",
      "padding": "0 20px",
      "textAlign": "center",
      "wordBreak": "break-word",
    }
  }
>
  <div
    className="marger__StyledMarger-q3lecu-0 ljzjIg"
  >
    <span
      className="k-u-color-primary1 k-u-line-height-normal k-u-weight-regular"
    >
      Backer name
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 dIUCnH"
  >
    <span
      className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents"
      style={
        Object {
          "margin": "0 auto",
        }
      }
      tabIndex={null}
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 gwMqJO"
  >
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Description
    </p>
  </div>
</div>
`;

exports[`<BackerCard /> with subtitle prop matches with snapshot 1`] = `
<div
  style={
    Object {
      "border": "2px solid #eee",
      "padding": "0 20px",
      "textAlign": "center",
      "wordBreak": "break-word",
    }
  }
>
  <div
    className="marger__StyledMarger-q3lecu-0 ljzjIg"
  >
    <span
      className="k-u-color-primary1 k-u-line-height-normal k-u-weight-regular"
    >
      Backer name
      <span
        className="k-u-color-font1 k-u-size-micro k-u-weight-light"
        style={
          Object {
            "display": "block",
          }
        }
      >
        Subtitle
      </span>
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 dIUCnH"
  >
    <span
      className="k-ButtonImage k-ButtonImage--huge k-ButtonImage--withoutPointerEvents"
      style={
        Object {
          "margin": "0 auto",
        }
      }
      tabIndex={null}
    >
      <img
        alt=""
        className="k-ButtonImage__img"
        src="#custom-src"
      />
    </span>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 gwMqJO"
  >
    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      Description
    </p>
  </div>
</div>
`;
